--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,10 +1,10 @@
 pipeline {
-    agent any
-    
-    tools {
-        maven 'mavenjenkins'
+    agent {
+        docker {
+            image 'maven:3-alpine'
+            args '-v /root/.m2:/root/.m2'
+        }
     }
-    
     stages {
         stage('Build') {
             steps {
